--- a/CSS/index-mediaqueries.css
+++ b/CSS/index-mediaqueries.css
@@ -1,3 +1,10 @@
+@media (min-width: 1238px) {
+    .cont-principal {
+        width: 1360px;
+        margin: auto;
+    }
+}
+
 @media (min-width: 600px) {
     .introduction .content h1 {
         font-size: 4.3em;
