Datos dinamicos en listado de tiendas y detalle de tienda

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                 </header>
                 <h1>Tus pedidos del súper a tu puerta</h1>
                 <div class="see-stores">
-                    <a href="/HTML/listado-tiendas.html" onclick="">Ver tiendas</a>
+                    <a href="/tiendas" onclick="">Ver tiendas</a>
                 </div>
                 <div class="log-in">
                     <span>¿Tienes una cuenta?
