--- a/views/tienda.ejs
+++ b/views/tienda.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alkosto</title>
+    <title><%= name %></title>
     <link rel="icon" href="https://apprecs.org/ios/images/app-icons/256/a3/995060131.jpg">
     <link rel="stylesheet" href="/CSS/tienda-jumbo.css">
 </head>
@@ -15,7 +15,7 @@
                 <div class="leading">
                     <button class="account-button">Tiendas</button>
                 </div>
-                <h1 class="title">Alkosto</h1>
+                <h1 class="title"><%= name %></h1>
                 <div class="trailing">
                     <button class="cart-button">
                         <i class="fa-solid fa-cart-shopping"></i>
@@ -47,45 +47,25 @@
         <main>
             <div class="container">
                 <div class="title">
-                    <h2>Despensa</h2>
+                    <h2>Frutas y verduras</h2>
                 </div>
                 <div class="contenido">
+                    <% for(const product of products) { %>
                     <div class="producto">
-                        <a href="">
+                        <a href="/HTML/producto-banana.html">
                             <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1059583.jpg?versionId=uc5XHlwqnjyuyE015GUPK3dkbPhwsXam" alt="P.A.N., Harina de maíz blanco" width="100" height="100">
+                                <img src="<%= product.image %>" alt="<%= product.name %>" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4>P.A.N - Harina de maiz blanco</h4>
-                                <p>1.5$</p>
+                                <h4><%= product.name %></h4>
+                                <p><%= product.price %></p>
+                                <p><%= product.unitDescription %></p>
+                                <p><%= product.unit %></p>
                             </div>
                         </a>
                         <button>Agregar</button>
                     </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1300258.jpg?versionId=pxS5fP0mgj3dPSg1xG0NIWG9vT06Uxhe" alt="Alkosto, Azucar blanca" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>Alkosto - Azucar blanca</h4>
-                                <p>1.5$</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
-                    <div class="producto">
-                        <a href="">
-                            <div class="producto-imagen">
-                                <img src="https://s.cornershopapp.com/product-images/1303481.jpg?versionId=2jlHPKK56IGLWE_B0Lt98kRzqEoBo5su" alt="Alkosto, Miel abejas dosificada" width="100" height="100">
-                            </div>
-                            <div class="producto-info">
-                                <h4>P.A.N - Harina de maiz blanco</h4>
-                                <p>3$</p>
-                            </div>
-                        </a>
-                        <button>Agregar</button>
-                    </div>
+                    <% } %>
                 </div>
             </div>
         </main>
