Vista de  productos

--- a/views/listado-tiendas.ejs
+++ b/views/listado-tiendas.ejs
@@ -56,8 +56,8 @@
                     <!--Primera seccion-->
                     <section class="stores-row-container">
                         <section>
-                            <div class="slider-scroll">
-                                <figure class="slider">
+                            <div class="slider-scroll-1">
+                                <figure class="slider-1">
                                     <div class="stores-group">
                                         
                                         <% for(const store of stores){ %>
