--- a/views/tienda.ejs
+++ b/views/tienda.ejs
@@ -44,23 +44,23 @@
                 </div>
             </header>
         </div>
-        <main>
+        <main> 
             <div class="container">
                 <div class="title">
                     <h2>Frutas y verduras</h2>
                 </div>
                 <div class="contenido">
-                    <% for(const product of products) { %>
+                    <% for(const item of products) { %>
                     <div class="producto">
-                        <a href="/HTML/producto-banana.html">
+                        <a href="/tiendas/<%= id %>/<%= item.id %>"> 
                             <div class="producto-imagen">
-                                <img src="<%= product.image %>" alt="<%= product.name %>" width="100" height="100">
+                                <img src="<%= item.image %>" alt="<%= item.name %>" width="100" height="100">
                             </div>
                             <div class="producto-info">
-                                <h4><%= product.name %></h4>
-                                <p><%= product.price %></p>
-                                <p><%= product.unitDescription %></p>
-                                <p><%= product.unit %></p>
+                                <h4><%= item.name %></h4>
+                                <p><%= item.price %></p>
+                                <p><%= item.unitDescription %></p>
+                                <p><%= item.unit %></p>
                             </div>
                         </a>
                         <button>Agregar</button>
