--- a/views/listado-tiendas.ejs
+++ b/views/listado-tiendas.ejs
@@ -61,7 +61,7 @@
                                     <div class="stores-group">
                                         
                                         <% for(const store of stores){ %>
-                                            <a href="/tiendas/<%= store.id %>">
+                                            <a href="/tiendas/<%= store.name %>/<%=  %>">
                                                 <figure class="stores-classic-card" style="background-color: <%= store.color %>;">
                                                     <div class="content">
                                                         <div class="logo">
