--- a/public/CSS/checkout.css
+++ b/public/CSS/checkout.css
@@ -14,6 +14,10 @@ header .cont-img .logo {
     margin: auto;
 }
 
+main {
+    margin-bottom: 4rem ;
+}
+
 main .confirmacion {
     border: 1px solid rgb(185, 184, 184);
     display: flex;
@@ -52,6 +56,29 @@ main .datos input {
     margin-bottom: 1rem;
     padding: 0.5rem;
     width: 100%;
+}
+
+main .datos input:focus {
+    border: 3px solid #0075FF;
+	outline: none;
+	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+}
+
+.colorRed {
+    border: 3px solid red;
+}
+
+.colorGreen {
+    border: 3px solid green;
+}
+
+.formulario__input-error {
+    padding-bottom: 1.5rem;
+    display: none;
+}
+
+.formulario__input-error-activo {
+	display: block;
 }
 
 main .shopper {
@@ -95,6 +122,35 @@ main .total .total-btn button {
     background-color: rgb(238, 43, 43);
     border: none;
     border-radius: 12px;
-    color: white;
+    color: rgb(196, 192, 192);
     font-size: 1rem;
+    cursor: pointer;
+}
+
+.formulario__mensaje {
+    padding: 2rem 0;
+    background-color: rgb(148, 21, 21);
+    color: rgb(196, 192, 192);
+    margin: 2rem 0;
+    border-radius: 8px;
+    text-align: center;
+    font-weight: bold;
+    display: none;
+}
+
+.formulario__mensaje-activo {
+    display: block;
+}
+
+.formulario__mensaje-exito {
+    padding: 1rem 0;
+    margin: 1rem 0;
+    color: rgb(255, 253, 253);
+    background-color: rgb(41, 121, 41);
+    border-radius: 8px;
+    display: none;
+}
+
+.formulario__mensaje-exito-activo {
+    display: block;
 }
