--- a/views/orden.html
+++ b/views/orden.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orden | Cornershop</title>
-    <link rel="stylesheet" href="/CSS/orden.css">
+    <link rel="stylesheet" href="/public/CSS/orden.css">
 </head>
 <body>
     <div class="container">
