--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -41,7 +41,7 @@
             </section>
             <hr>
             <a href="/carrito/agregar/<%= productId %>">
-                <button id="agregarCarrito" class="agregarCarrito" onclick="addproduct('<%= productId %>')">Agregar al carrito</button>
+                <button>Agregar al carrito</button>
             </a>
             
         </div>
