--- a/views/carrito-de-compras.ejs
+++ b/views/carrito-de-compras.ejs
@@ -12,7 +12,7 @@
     <div class="container">
         <header class="header">
             <div class="cont-title"> 
-                <a href="/HTML/listado-tiendas.html">
+                <a href="/tiendas">
                     <button class="btn">Volver a las tiendas</button>
                 </a>
                 <h1>Carrito de compras</h1>
@@ -52,10 +52,12 @@
                             <h4><%= product.name %></h4>
                         </div>
                         <div class="precio">
-                            <button class="btn-negro"><%= product.price %></button>
+                            <button class="btn-negro"><%= product.price %> $</button>
                         </div>
                         <div class="eliminar">
-                            <button class="btn-rojo">X</button>
+                            <a href="/delete/<%= product.id %>">
+                                <button class="btn-rojo">X</button>
+                            </a>
                         </div>
                     </div>
                     <% } %>
