--- a/views/orden.ejs
+++ b/views/orden.ejs
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orden | Cornershop</title>
-    <link rel="stylesheet" href="/public/CSS/orden.css">
+    <link rel="stylesheet" href="/CSS/orden.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div> 
                 <a href="/HTML/listado-tiendas.html">
-                    <button class="btn">Volver a las tiendas</button>
+                    <a href="/tiendas">
+                        <button class="btn">Volver a las tiendas</button>
+                    </a>
                 </a>
             </div>
             <div>
@@ -20,7 +22,9 @@
             </div>
             <div>
                 <a href="/HTML/carrito-de-compras.html">
-                    <button>Volver al carrito</button>
+                    <a href="/carrito">
+                        <button>Volver al carrito</button>
+                    </a>
                 </a>
             </div>
             </div>
