--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -26,11 +26,11 @@
                     <tbody>
                         <tr>
                             <th scope="row"><span>Precio</span></th>
-                            <td itemprop="price"><span class="price"><span><%= detalle.price %></span></td>
+                            <td itemprop="price"><span class="price"><span><%= detalle.price %> $</span></td>
                         </tr>
                         <tr>
                             <th scope="row"><%= detalle.unitDescription %></th>
-                            <td><span><%= detalle.price %></span></td>
+                            <td><span><%= detalle.price %> $</span></td>
                         </tr>
                         <tr>
                             <th scope="row"><span>Formato</span></th>
