--- a/views/tienda.ejs
+++ b/views/tienda.ejs
@@ -58,7 +58,7 @@
                             </div>
                             <div class="producto-info">
                                 <h4><%= item.name %></h4>
-                                <p><%= item.price %></p>
+                                <p><%= item.price %> $</p>
                                 <p><%= item.unitDescription %></p>
                                 <p><%= item.unit %></p>
                             </div>
