obtener los datos del formulario

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -109,7 +109,7 @@
                         </div> 
                         <div class="formulario__mensaje-exito" id="formulario__mensaje-exito">
                             <p>La orden se envio correctamente</p>
-                            <a href="/orden">
+                            <a id="order-link">
                                 <button class="vista-orden" type="button">Ir a orden</button>
                             </a>    
                         </div>
@@ -119,6 +119,7 @@
             
         </main>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/dd5e87f640.js" crossorigin="anonymous"></script>
     <script src="/checkout.js"></script>
 </body>
